# revision-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/revision_analyser/: __init__.py  analyser.py  api.py  cli.py  exceptions.py  manifest.py  parser.py  schemas.py
tests/: conftest.py  test_analyser.py  test_api.py  test_cli.py  test_parser.py  test_public_api.py
